--- a/src/app/MyComponent/jitsi.component.html
+++ b/src/app/MyComponent/jitsi.component.html
@@ -99,7 +99,7 @@
         </style>
         <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
         <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-        <script src="https://jitsi.test.com/external_api.js"></script>
+        <script src="https://jitsi.exzaconcert.com/external_api.js"></script>
         <script src="jitsi.component.ts"></script>
         
         <script>
