--- a/src/app/MyComponent/jitsi.component.html
+++ b/src/app/MyComponent/jitsi.component.html
@@ -99,8 +99,12 @@
         </style>
         <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
         <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-        <script src="https://jitsi.exzaconcert.com/external_api.js"></script>
-        <script src="jitsi.component.ts"></script>
+        <div style="text-align: center;">
+            <a routerLink="/"></a>
+        </div>
+        
+        <!-- <script src="https://jitsi.exzaconcert.com/external_api.js"></script>
+        <script src="jitsi.component.ts"></script> -->
         
         <script>
             $(function(){
@@ -115,9 +119,11 @@
                 });
             // });
 
-
-          
-
+            function reload(){
+                var iframe= document.getElementById('jitsi-iframe');
+                iframe.src=iframe.src;
+            }
+            setInterval(reload, 1000);
 
             
         </script>
@@ -148,7 +154,7 @@
        <label for="camera">Enable Camera</label><br>
        
                 <div class="container">
-                    <div id="jitsi-iframe" class="jitsiFrame" style ="height:760px; width:498px" ></div>
+                    <div id="jitsi-iframe" class="jitsiFrame" src="anything.html" style ="height:760px; width:498px" ></div>
                       <div id="toolbox" class="toolbox">
                         <span>&nbsp;&nbsp;</span>
                         <button class="toolbarButtons" (click)="Command('hangup')"  title="Leave">
